Fix #1059 - Revise category filter buttons to wrap if necessary

--- a/static/scss/components/filter-bar.scss
+++ b/static/scss/components/filter-bar.scss
@@ -236,9 +236,18 @@
     }
 }
 
+.c-filter-category-types {
+    margin-bottom: 0;
+}
+
 .c-filter-category-buttons {
-    padding: 0 $spacing-md $spacing-md;
+    padding: $spacing-md $spacing-md 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.c-filter-category-buttons button {
+    margin-bottom: $spacing-md;
 }
